--- a/01-HTML-CSS/01-html basic tags/index.html
+++ b/01-HTML-CSS/01-html basic tags/index.html
@@ -25,7 +25,7 @@
     }
 </style>
 <body dir='rtl'>
-    <h1>מה נשמע?</h1>
+    <h1>מה הולך?</h1>
     <h2 dir='ltr'>what up?</h2>
     <p dir='ltr'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis delectus voluptas nesciunt, mollitia aut non autem quas soluta quisquam magnam totam doloribus beatae veniam obcaecati laudantium eveniet incidunt temporibus modi?</p>
 </body>
