--- a/01-HTML-CSS/03-position/Suarez/works/work1/index.html
+++ b/01-HTML-CSS/03-position/Suarez/works/work1/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Eliya Suarez</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <style>
         
         body{
             background:#eee;
+            font-family:sans-serif;
         }
         
         .banner-area{
