--- a/01-HTML-CSS/04-flex/shay/index.html
+++ b/01-HTML-CSS/04-flex/shay/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="wrraper">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
-        <div class="box">6</div>
+        <div class="box"><p>1</p></div>
+        <div class="box"><p>2</p></div>
+        <div class="box"><p>3</p></div>
+        <div class="box"><p>4</p></div>
+        <div class="box"><p>5</p></div>
+        <div class="box"><p>6</p></div>
     </div>
 </body>
 </html>
