--- a/01-HTML-CSS/04-flex/Etan/Index.html
+++ b/01-HTML-CSS/04-flex/Etan/Index.html
@@ -9,11 +9,33 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
+        <div class="box">
+            <p>1</p>
+        </div>
+        <div class="box">
+            <p>2</p>
+        </div>
+        <div class="box">
+            <p>3</p>
+        </div>
+        <div class="box">
+            <p>4</p>
+        </div>
+        <div class="box">
+            <p>5</p>
+        </div>
+        <div class="box">
+            <p>6</p>
+        </div>
+        <div class="box">
+            <p>7</p>
+        </div>
+        <div class="box">
+            <p>8</p>
+        </div>
+        <div class="box">
+            <p>9</p>
+        </div>
     </div>
 </body>
 </html>
