--- a/01-HTML-CSS/04-flex/tal/index.html
+++ b/01-HTML-CSS/04-flex/tal/index.html
@@ -14,7 +14,8 @@
         <div class="box">3</div>
         <div class="box">4</div>
         <div class="box">5</div>
-        <div class="box">6</div>
+        <div class="box"><span>6</span><span>6</span></div>
+        <div class="box">5</div>
     </div>
 </body>
 </html>
