--- a/01-HTML-CSS/04-flex/oneExercise/Shani & Etan/Index.html
+++ b/01-HTML-CSS/04-flex/oneExercise/Shani & Etan/Index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="box"><img src="https://i2-prod.mirror.co.uk/incoming/article25383835.ece/ALTERNATES/s1200d/0_piranhas.jpg" 
+        <div class="box"><img class="maneatenalive" src="https://i2-prod.mirror.co.uk/incoming/article25383835.ece/ALTERNATES/s1200d/0_piranhas.jpg" 
             alt="man eatan alive"/></div>
         <div class="box">1</div>
         <div class="box">1</div>
