--- a/01-HTML-CSS/04-flex/Roi/index.html
+++ b/01-HTML-CSS/04-flex/Roi/index.html
@@ -15,6 +15,10 @@
         <div class = "box">4</div>
         <div class = "box">5</div>
         <div class = "box">6</div>
+        <div class = "box">7</div>
+        <div class = "box">8</div>
+        <div class = "box">9</div>
+        <div class = "box">10</div>
     </div>
 </body>
 </html>
