--- a/01-HTML-CSS/03-position/HomeTasks/Tal/Andrew/index.html
+++ b/01-HTML-CSS/03-position/HomeTasks/Tal/Andrew/index.html
@@ -12,48 +12,62 @@
 <body>
     <div class="headline">
         <div class="button">
-            hot news
+            <h3>
+                hot news
+
         </div>
         <div class="button">
-            football
+            <h3>
+                football
+            </h3>
         </div>
         <div class="button">
-            basketball
+            <h3>
+                basketball
+            </h3>
         </div>
         <div class="button">
-            soccer
+            <h3>
+                soccer
+            </h3>
         </div>
         <div class="button">
-            Lorem.
+            <h3>
+                baseball
+            </h3>
         </div>
         <div class="button">
-            Lorem.
+            <h3>
+                tennis
+            </h3>
         </div>
         <div class="button">
-            Lorem.
+            <h3>
+                racing
+            </h3>
         </div>
     </div>
     <div class="news">
         <div class="photo">
-            <img src="">
+            <img src="https://i.pinimg.com/originals/b8/0f/8b/b80f8b9ea43bfcacfc0f0da035077162.jpg">
             <p>
                 Lorem ipsum dolor sit amet consectetur.
             </p>
         </div>
         <div class="photo">
-            <img src="">
+            <img src="https://thumbs.dreamstime.com/b/funny-retro-sport-nerd-lifting-weights-drawn-chalkboard-61212283.jpg">
             <p>
                 Lorem ipsum dolor sit amet consectetur.
             </p>
         </div>
         <div class="photo">
-            <img src="">
+            <img src="https://i2-prod.mirror.co.uk/incoming/article9483756.ece/ALTERNATES/s615b/TOPSHOT-FBL-EUR-C1-REALMADRID-ROMA.jpg">
             <p>
                 Lorem ipsum dolor sit amet.
             </p>
         </div>
         <div class="photo">
-            <img src="">
+            <img src="https://wl-brightside.cf.tsp.li/resize/728x/jpg/b64/5d2/d3fbe65bad86b25f939a04f913.jpg">
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing.
             </p>
