--- a/01-HTML-CSS/04-flex/oneExercise/leon/index.html
+++ b/01-HTML-CSS/04-flex/oneExercise/leon/index.html
@@ -11,12 +11,24 @@
     <div class="wrapper">
         <div class="box">
             <img src="img/pexels-guduru-ajay-bhargav-863988.jpg" alt="">
+            <h3>basketball</h3>
         </div>
         <div class="box">
             <img src="img/pexels-pixabay-209977.jpg" alt="">
+            <h3>football</h3>
         </div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box">
+            <img src="img/pexels-victor-freitas-841130.jpg" alt="">
+            <h3>golf</h3>
+        </div>
+        <div class="box">
+            <img src="img/pexels-mike-1171084.jpg" alt="">
+            <h3>swimming</h3>
+        </div>
+        <div class="box">
+            <img src="img/pexels-guduru-ajay-bhargav-863988.jpg" alt="">
+            <h3>sport</h3>
+        </div>
     </div>
     
 </body>
