--- a/01-HTML-CSS/04-flex/oneExercise/Omri/oneEx.html
+++ b/01-HTML-CSS/04-flex/oneExercise/Omri/oneEx.html
@@ -24,8 +24,9 @@
             <img src="NBA.jpg">
         </div>
         <div class="box">
-            <img src="Weather.png">
+            <img src="Miami.jpg">
         </div>
+        <div class="text"></div>
     </div>
     
 </body>
