--- a/01-HTML-CSS/04-flex/oneExercise/Omri/oneEx.html
+++ b/01-HTML-CSS/04-flex/oneExercise/Omri/oneEx.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <div class="text">
+        <div class="headline"></div>
+        <div class="headline"></div>
+        <div class="headline"></div>
+        <div class="headline"></div>
+        <div class="headline"></div>
+    </div>
     <div class="wrapper">
         <div class="box">
             <img src="Alarm.jpg">
@@ -26,7 +33,6 @@
         <div class="box">
             <img src="Miami.jpg">
         </div>
-        <div class="text"></div>
     </div>
     
 </body>
