--- a/01-HTML-CSS/04-flex/oneExercise/Alex/index.html
+++ b/01-HTML-CSS/04-flex/oneExercise/Alex/index.html
@@ -2,29 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <ul>
-        <li></li>
-    </ul>
-    <div class="wrapper">
-        <div class="box"><img
-                src="https://i.picsum.photos/id/37/200/300.jpg?hmac=H-M0-zyAOZnQIHrggRUcDCS_roK8MHKI1OtEgZA72yk"> </div>
-        <div class="box"><img
-                src="https://i.picsum.photos/id/37/200/300.jpg?hmac=H-M0-zyAOZnQIHrggRUcDCS_roK8MHKI1OtEgZA72yk"> </div>
-        <div class="box"><img
-                src="https://i.picsum.photos/id/37/200/300.jpg?hmac=H-M0-zyAOZnQIHrggRUcDCS_roK8MHKI1OtEgZA72yk"> </div>
-        <div class="box"><img
-                src="https://i.picsum.photos/id/37/200/300.jpg?hmac=H-M0-zyAOZnQIHrggRUcDCS_roK8MHKI1OtEgZA72yk"> </div>
-        <div class="box"><img
-                src="https://i.picsum.photos/id/37/200/300.jpg?hmac=H-M0-zyAOZnQIHrggRUcDCS_roK8MHKI1OtEgZA72yk"></div>
-    </div>
+        <ul>
+                <li></li>
+        </ul>
+        <div class="wrapper">
+                <div class="box"><img
+                                src="https://i.picsum.photos/id/37/200/300.jpg?hmac=H-M0-zyAOZnQIHrggRUcDCS_roK8MHKI1OtEgZA72yk">
+                </div>
+                <div class="box"><img
+                                src="https://i.picsum.photos/id/37/200/300.jpg?hmac=H-M0-zyAOZnQIHrggRUcDCS_roK8MHKI1OtEgZA72yk">
+                </div>
+                <div class="box"><img
+                                src="https://i.picsum.photos/id/37/200/300.jpg?hmac=H-M0-zyAOZnQIHrggRUcDCS_roK8MHKI1OtEgZA72yk">
+                </div>
+                <div class="box"><img
+                                src="https://i.picsum.photos/id/37/200/300.jpg?hmac=H-M0-zyAOZnQIHrggRUcDCS_roK8MHKI1OtEgZA72yk">
+                </div>
+                <div class="box"><img
+                                src="https://i.picsum.photos/id/37/200/300.jpg?hmac=H-M0-zyAOZnQIHrggRUcDCS_roK8MHKI1OtEgZA72yk">
+                </div>
+        </div>
 </body>
 
 </html>
