--- a/01-HTML-CSS/04-flex/HomeTask/OmriAharonov/Flex.html
+++ b/01-HTML-CSS/04-flex/HomeTask/OmriAharonov/Flex.html
@@ -28,6 +28,32 @@
             <img src="magnifying-glass.png">
         </div>
     </div>
-    .
+
+    <div class="wrapper">
+        <div class="category"></div>
+        <div class="category"></div>
+        <div class="category"></div>
+        <div class="category"></div>
+        <div class="category"></div>
+        <div class="category"></div>
+    </div>
+
+    <div class="socialMedia">
+        <div class="icon">
+            <img src="instagram.png">
+        </div>
+        <div class="icon">
+            <img src="facebook.png">
+        </div>
+        <div class="icon">
+            <img src="whatsapp.png">
+        </div>
+        <div class="icon">
+            <img src="twitter.png">
+        </div>
+        <div class="icon">
+            <img src="email.png">
+        </div>
+    </div>
 </body>
 </html>
