--- a/01-HTML-CSS/04-flex/HomeTask/shimon - mission 4/mission 4.html
+++ b/01-HTML-CSS/04-flex/HomeTask/shimon - mission 4/mission 4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mission 4 - Shimon Hasidim</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/9604c449fe.js" crossorigin="anonymous"></script>
     <style>
@@ -16,8 +16,8 @@
 
     <div class="title_style">
         <h1> <i class="fas fa-carrot"></i>
-            The vegetable store in the neighborhood <hr>
-        The freshest fruits and vegetables in the neighborhood ...  </h1>
+            The vegetable store in the neighborhood <hr> </h1>
+        <h2>The freshest fruits and vegetables in the neighborhood ... </h2>
 
     </div>
     
