Rasheed(Game-Web-Task)

--- a/01-HTML-CSS/04-flex/HomeTask/Rasheed(Game-Web-Task)/HomeTask(Website).html
+++ b/01-HTML-CSS/04-flex/HomeTask/Rasheed(Game-Web-Task)/HomeTask(Website).html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="WebsiteStyle.css">
+  <link rel="stylesheet" href="/css/all.min.css">
   <title>Gaming Website</title>
 </head>
 
@@ -15,7 +16,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>P</span>c <span>G</span>aming</h1>
+            <h1><i class="fas fa-desktop"></i><span>P</span>c <span>G</span>aming</h1>
           </a>
         </div>
         <div class="nav-list">
@@ -23,7 +24,7 @@
             <div class="bar"></div>
           </div>
           <ul>
-            <li><a href="#hero" data-after="Home">Home</a></li>
+            <li><a href="#hero" data-after="Home"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="#openworld" data-after="openworld">openworld</a></li>
             <li><a href="#shooter" data-after="shooter">First Person shooter</a></li>
             <li><a href="#pcgaming" data-after="pcgaming">pc gaming</a></li>
@@ -43,7 +44,7 @@
         <h1>WELCOME <span></span></h1>
         <h1>TO PC <span></span></h1>
         <h1>GAMING <span></span></h1>
-        <a href="#shooter" type="button" class="cta">first Person shooter</a>
+        <a href="#shooter" type="button" class="cta"><i class="fas fa-meteor"></i>first Person shooter</a>
       </div>
     </div>
   </section>
@@ -217,7 +218,7 @@
         </div>
       </div>
       <div class="col-right">
-        <h1 class="section-title">Pc <span>Gaming</span></h1>
+        <h1 class="section-title"><i class="fas fa-1x fa-desktop"></i>Pc <span>Gaming</span></h1>
         <p>A PC game, also known as a computer game, is a type of video game played on a personal computer (PC) rather than a video game console or
            arcade machine. Its defining characteristics include: more diverse and user-determined gaming hardware and software; and generally greater
             capacity in input, processing, video and audio output. The uncoordinated nature of the PC game market, and now its lack of physical media
@@ -274,6 +275,7 @@
     </div>
         <h2>THE HOME OF GAMING</h2>
       </div>
+      
   </section>
 
   <script src="./app.js"></script>
