--- a/01-HTML-CSS/04-flex/HomeTask/Rasheed(Game-Web-Task)/HomeTask(Website).html
+++ b/01-HTML-CSS/04-flex/HomeTask/Rasheed(Game-Web-Task)/HomeTask(Website).html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="WebsiteStyle.css">
-  <link rel="stylesheet" href="/css/all.min.css">
+  <script src="https://kit.fontawesome.com/3ae94d6aa8.js" crossorigin="anonymous"></script>
   <title>Gaming Website</title>
 </head>
 
