--- a/01-HTML-CSS/04-flex/HomeTask/OmriAharonov/Flex.html
+++ b/01-HTML-CSS/04-flex/HomeTask/OmriAharonov/Flex.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/7009c62a78.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap" rel="stylesheet">
     <title>Online Supermarket</title>
 </head>
+
 <body>
     <div class="menu">
         <div class="options">
@@ -22,7 +26,7 @@
             <p>Personal zone</p>
         </div>
         <div class="options">
-           <p>Sign In</p> 
+            <p>Sign In</p>
         </div>
         <div class="options">
             <img src="magnifying-glass.png">
@@ -30,12 +34,37 @@
     </div>
 
     <div class="wrapper">
-        <div class="category"></div>
-        <div class="category"></div>
-        <div class="category"></div>
-        <div class="category"></div>
-        <div class="category"></div>
-        <div class="category"></div>
+
+        <div class="category">
+            <img src="bread.png">
+            <p>Pastries</p>
+        </div>
+
+        <div class="category">
+            <img src="fruits & vegetables.png">
+            <p>Fruits&Vegetables</p>
+        </div>
+
+        <div class="category">
+            <img src="fish.png">
+            <img src="salmon.png">
+            <p>Fish</p>
+        </div>
+
+        <div class="category">
+            <img src="soft-drink.png">
+            <p>Soft-Drink</p>
+        </div>
+
+        <div class="category">
+            <img src="dairy-products.png">
+            <p>Dairy-Products</p>
+        </div>
+
+        <div class="category">
+            <img src="cleaning.png">
+            <p>Cleaning</p>
+        </div>
     </div>
 
     <div class="socialMedia">
@@ -56,4 +85,5 @@
         </div>
     </div>
 </body>
+
 </html>
