--- a/01-HTML-CSS/04-flex/oneExercise/artur/flex.html
+++ b/01-HTML-CSS/04-flex/oneExercise/artur/flex.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <div class="wrapper">
-        <div class="box1">
-
+        <div class="box">
+            <img src="photos/photo1.jpg" alt="">
         </div>
-        <div class="box2">
-
+        <div class="box">
+            <img src="photos/photo2.jpg" alt="">
         </div>
-        <div class="box3">
-
+        <div class="box">
+            <img src="photos/photo3.jpg" alt="">
         </div>
-        <div class="box4">
+        <div class="box">
+            <img src="photos/photo4.jpg" alt="">
 
         </div>
 
