--- a/01-HTML-CSS/04-flex/chaim/index.html
+++ b/01-HTML-CSS/04-flex/chaim/index.html
@@ -6,17 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    </head>
 <body>
+    <img src="פירות.jpg"> 
     
+    <h1>פירות וירקות</h1>
+</div>
     <div class="wrapper">
-        <div class="box">1</div> 
-        <img src="C:\Users\Owner\Desktop\chaim".jpg alt="">
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
-        <div class="box">6</div>
+        <div class="box">1
+        <img src="1.jpg"> 
+        <h3>תפוח חרמון</h3>
+        <p>אחד הסוגים בתפוחי עץ- תפוח חרמון</p>
         </div>
+        <div class="box">2
+       <img src="2.jpg">
+       <h3>עגבניות שרי</h3>
+        <p>עגבניית שרי נקראת כך עקב הדימיון לדובדבן</p>
+     </div>
+     <div class="box">3
+    <img src="3.jpg">
+    <h3>עגבנייה</h3>
+     <p>העגבנייה מוגדרת כפרי מבחינת אופן הגידול  </p>
+</div>
+        <div class="box">4
+        <img src="4.jpg">
+        <h3>בננה</h3>
+     <p>על הבננה מברכים בורא פרי האדמה</p>    
+        </div>
+        <div class="box">5
+   <img src="5.jpg">
+   <h3>מלפפון</h3>
+   <p>למלפפון יש שם נוסף קישוא הגינה</p>
+  </div>
+ <div class="box">6
+  <img src="6.jpg">
+  <h3>תפוז</h3>
+  <p>התפוז הוא אחד מפירות ההדר</p>
+ </div>
+ </div>
 </body>
 </html>
