--- a/01-HTML-CSS/04-flex/oneExercise/MichaelD/index.htm
+++ b/01-HTML-CSS/04-flex/oneExercise/MichaelD/index.htm
@@ -9,16 +9,28 @@
 </head>
 <body>
     <div class="wrapper">
+
         <div class="box">
+
+            <img src="https://picsum.photos/200/300?grayscale" alt="">
             
         </div>
+
         <div class="box">
 
-        </div>
-        <div class="box">
+            <img src="https://picsum.photos/200/300/?blur" alt="">
 
         </div>
+
         <div class="box">
+
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="">
+
+        </div>
+
+        <div class="box">
+
+            <img src="https://picsum.photos/id/237/200/300" alt="">
 
         </div>
     </div>
