add Awesome font

--- a/01-HTML-CSS/04-flex/Lior_Krasnopolski/Home_Work_4.html
+++ b/01-HTML-CSS/04-flex/Lior_Krasnopolski/Home_Work_4.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lior's Store</title>
     <link rel="stylesheet" href="Home_Work_4.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d4474f137c.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <div class="General">       
         <!--Header-->
         <h1>My Luxury Store</h1>
-
         <!--Banner -->
         <div class="banner">
             <div class="navbar">
@@ -23,7 +22,6 @@
                     <li> <a href="#">About us</a> </li>
                     <li> <a href="#">Bonus</a> </li>
                     <li> <a href="#">Contact Us</a> </li>
-    
                     </li>
                 </ul>
             </div>
@@ -112,10 +110,13 @@
             </p>
             <div>
                 <button type="button" class="below_button"><span class="button_of_the_page"></span> More Products </button>
-                <button type="button" class="below_button"><span class="button_of_the_page"></span> Subscribe </button>
+                <button type="button" class="below_button"><span class="button_of_the_page">
+                    <i class="fas fa-user-plus"></i>
+                </span> Subscribe </button>
             </div>
         </div>
     </div>
+    <script src="https://kit.fontawesome.com/d4474f137c.js" crossorigin="anonymous"></script>
 
 
 </body>
