--- a/01-HTML-CSS/04-flex/Andrew/index.html
+++ b/01-HTML-CSS/04-flex/Andrew/index.html
@@ -10,37 +10,254 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="box">
 
+    <div class="header">
+        <div class="button">
+            <a href="#Izzo">Trail</a>
         </div>
-        <div class="box">
-
+        <div class="button">
+            <a href="#Jeffsy">All-Mountine</a>
         </div>
-        <div class="box">
-
+        <div class="button">
+            <a href="#Capra">Enduro</a>
         </div>
-        <div class="box">
-
-        </div>
-        <div class="box">
-
-        </div>
-        <div class="smallwarapper">
-            <div class="box">
-
-            </div>
-            <div class="box">
-
-            </div>
-            <div class="box">
-
-            </div>
-            <div class="box">
-
-            </div>
+        <div class="button">
+            <a href="#Tues">Downhill</a>
         </div>
     </div>
+
+    <div class="spacer"></div>
+
+    <div class="about">
+        <img id="aboutPic" src="https://i.pinimg.com/originals/32/ee/de/32eedee7985c0900eba1a851d80cf242.jpg">
+        <div class="aboutText">
+            <img src="https://www.yt-industries.com/media/image/95/52/49/yt-family-wolf-banner.png">
+            <p>
+                Who says you’re too old, too slow, too anything? We say it doesn't matter what anybody else thinks.
+                Everyone at YT shares one mantra - ‘Live Uncaged’. It reflects our goal to remove boundaries, challenge
+                conventions, and do things better. It guides our actions and is shown in every product we make. Progress
+                doesn't happen without change and change doesn't happen without action. So, join us. Break free, find
+                your Young Talent, and Live Uncaged.
+            </p>
+        </div>
+    </div>
+
+    <div id="Izzo" class="categoryHeader">
+        <img src="https://cdn-prod.yt-industries.com/media/image/ff/48/a6/Izzo_Core2_IceGrey_Action-02.jpg" alt="">
+        <p>
+            Sharp like a katana sword, agile and just plain fast. The IZZO is a true everyday mountain bike with the
+            usual YT DNA. A short travel trail bike that doesn't want to be an all mountain but a super light tool for
+            classic trail riding. No matter whether you're headed out for a multi-day trip or just an after-work loop.
+            The IZZO sets the standards. It's so!
+        </p>
+    </div>
+    <div class="category">
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/81/7d/18/IZZO_29_BLAZE_Front.png" alt="">
+            <p>
+                Izzo Blaze 29er <br> 3,999 €
+            </p>
+            <p>
+                Leave friends and foes behind choking on dust, while you blast up the hills and send it back down again.
+                The IZZO Blaze comes with the same high-quality carbon frame and sensational climbing abilities, but
+                adds that little bit extra travel. The high-end RockShox Ultimate suspension with individual
+                adjustability enables you to push the limits a little further. Thanks to the mid-range drivetrain with
+                52T this model will give you maximum performance and maximum fun all day long.
+            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/92/f4/1f/01_Izzo_29_CF_Core4_Machine_Grey_Front.png"
+                alt="">
+            <p>
+                Izzo Core 4 29er <br> 5,599 €
+            </p>
+            <p>
+                We cut no corners for the highest CORE level – these uncompromising Factory Team level packages were
+                made for taking on the most demanding terrain. The IZZO CORE 4 is equipped with the very best components
+                and every little detail has been optimized for performance – from the high-end parts to the top-notch
+                carbon frame. The suspension elements are fully adjustable to ensure that even the gnarliest trails are
+                within your comfort zone. From the race track to the home trails, these bikes leave nothing to be
+                desired – but that also means that there are no more excuses.
+            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/2e/55/5e/03_Izzo_29_CF_Core3_Assault_Green_Front.png"
+                alt="">
+            <p>
+                Izzo Core 3 29er <br> 4,299 €
+            </p>
+            <p>
+                Want to pin it? Then you want the IZZO CORE 3! Carefully selected premium, durable components on
+                high-end carbon frames, with fully adjustable suspension elements that deliver exactly the level of
+                performance that ambitious riders are looking for. These outstanding builds give you everything you need
+                to conquer any challenge on the mountain – unlimited fun on your trails, guaranteed.
+            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/9b/5f/5f/05_Izzo_29_CF_Core2_Ice_Grey_Front.png"
+                alt="">
+            <p>
+                Izzo Core 2 29er <br> 3,399 €
+            </p>
+            <p>
+                CORE 2 stands for a versatile platform with a carefully selected parts specification that combines
+                performance and efficiency. The IZZO CORE 2 will please both beginners and experts alike, with its
+                carbon main frame and its aluminum rear triangle. This is a perfect trail-shredding machine, made even
+                better by high-quality components and uncomplicated suspension elements. Regardless of whether you want
+                to go out for a quick rip or a long bike trip – with the IZZO CORE 2 you’ll be ready for anything.
+            </p>
+        </div>
+
+    </div>
+    <div id="Jeffsy" class="categoryHeader">
+        <img src="https://cdn-prod.yt-industries.com/media/image/40/dc/0d/Jeffsy_Core4_Gallery05.jpg" alt="">
+        <p>
+            Far out or nothing - with JEFFSY we have realized our very own definition of trail riding. JEFFSY is the YT
+            among all mountain bikes, it's like your best friend for new top performances: together you climb the higher
+            mountains, discover the most remote places and stamp downhill with full speed - JEFFSY and you, you are an
+            unbeatable team
+        </p>
+    </div>
+    <div class="category">
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/d4/2b/e8/JEFFSY_29_BLAZE_FrontoZelkHrvnFOcD.png" alt="">
+            <p>
+                Jeffsy Blaze 29er <br> 3,999 €
+            </p>
+            <p>
+                Your best friend to blaze up and down the mountains! The JEFFSY Blaze 29 combines the modern all mountain geometry and high-end RockShox Ultimate suspenion with individual customizability to deliver a high-performance riding experience. Thanks to the mid-range drivetrain with 52T this model will give maximum performance so that riders that focus on what counts will be grinning from ear to ear after a long day on the bike.
+
+            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/70/5b/50/Jeffsy_29_CF_SuperPro_Front.png"
+                alt="">
+            <p>
+                Jeffsy Uncaged 6 29er <br> 8,999 €
+            </p>
+            <p>
+                UNCAGED 6 could be translated to "the best there is", as these bikes really showcase what we can do with technology. The base of the build is a top-notch, Ultra-Modulus carbon frame with geometry that perfectly matches the intended use of the bike. Equipped with the most modern parts from SRAM, Crankbrothers and others, this is the perfect fusion of ultimate performance, new features, ease of use and a clean look. The stand-out highlight is of course the wireless, AXS-based Flight Attendant system from SRAM, which automatically and continuously controls the suspension to make your ride faster and more efficient.
+
+            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/71/7f/7e/01_Jeffsy_29_CF_CORE_4_red_Front.png"
+                alt="">
+            <p>
+                Jeffsy Core 4 29er <br> 5,199 €
+            </p>
+            <p>
+                We cut no corners for the highest CORE level – these uncompromising Factory Team level packages were made for taking on the most demanding terrain. The JEFFSY CORE 4 are equipped with the very best components and every little detail has been optimized for performance – from the high-end parts to the top-notch carbon frame. The suspension elements are fully adjustable to ensure that even the gnarliest trails are within your comfort zone. From the race track to the home trails, these bikes leave nothing to be desired – but that also means that there are no more excuses.
+
+            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/45/95/28/03_Jeffsy_29_CF_CORE_3_green_Front.png"
+                alt="">
+            <p>
+                Jeffsy Core 3 29er <br> 4,199 €
+            </p>
+            <p>
+                Want to pin it? Then you want the JEFFSY CORE 3! Carefully selected premium, durable components on high-end carbon frames, with fully adjustable suspension elements that deliver exactly the level of performance that ambitious riders are looking for. These outstanding builds give you everything you need to conquer any challenge on the mountain – unlimited fun on your trails, guaranteed.
+
+            </p>
+        </div>
+
+    </div>
+    <div id="Capra" class="categoryHeader">
+        <img src="https://cdn-prod.yt-industries.com/media/image/4d/23/2d/Capra-MK3_NoxBlue_Action-02.jpg" alt="">
+        <p>
+            The CAPRA is a true legend. When we launched the first CAPRA in 2014, we changed enduro forever and set the
+            benchmark. The current CAPRA followed the same path and became our fastest, most capable enduro bike ever.
+            It will take you to where things get exciting: to the top of the big trails. Time to pin it. Whether you
+            race the EWS, the local beer league, or you just like to hit your favorite bike park - the harder you
+            charge, the happier the Goatman. The CAPRA is gravity focused.
+        </p>
+    </div>
+    <div class="category">
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/67/1a/ed/05_Capra_MK3_27_Launch_Edition_Front.png" alt="">
+            <p>
+                Capra Launch Edition MX <br> 7,499 €
+            </p>
+            <p>
+                Anyone who has seen Return of the Goat immediately knows where the inspiration for the look of the Launch Edition of the new CAPRA comes from: the color and decals are more than a little reminiscent of the Goatman's van. But that's where the similarities end, because every single component of the Launch Edition bike is absolutely premium and anything but ordinary; from the RockShox ZEB Ultimate fork and the Cane Creek DB Kitsuma damper, to the eeWings crank made of titanium. This superlative bike is incredibly robust and focused entirely on performance - the Goatman likes this!            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/ca/a3/29/Capra_29_CF_SUPERPRO_Front.png"   alt="">
+            <p>
+                Capra Uncaged 6 29er <br> 8,999 €
+            </p>
+            <p>
+                UNCAGED 6 could be translated to "the best there is", as these bikes really showcase what we can do with technology. The base of the build is a top-notch, Ultra-Modulus carbon frame with geometry that perfectly matches the intended use of the bike. Equipped with the most modern parts from SRAM, Crankbrothers and others, this is the perfect fusion of ultimate performance, new features, ease of use and a clean look. The stand-out highlight is of course the wireless, AXS-based Flight Attendant system from SRAM, which automatically and continuously controls the suspension to make your ride faster and more efficient.            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/5f/ff/fd/05_Capra_29_CF_Core4_NoxBlue_Front.png"   alt="">
+            <p>
+                Capra Core 4 29er <br> 5,999 €
+            </p>
+            <p>
+                We cut no corners for the highest CORE level – these uncompromising Factory Team level packages were made for taking on the most demanding terrain. The CAPRA CORE 4 is equipped with the very best components and every little detail has been optimized for performance – from the high-end parts to the top-notch carbon frame. The suspension elements are fully adjustable to ensure that even the gnarliest trails are within your comfort zone. From the race track to the home trails, these bikes leave nothing to be desired – but that also means that there are no more excuses.            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/f9/6b/03/07_Capra_29_CF_Core3_Deep_Yellow_Front.png"   alt="">
+            <p>
+                Capra Core 3 29er <br> 4,499 €
+            </p>
+            <p>
+                Want to pin it? Then you want the CORE 3! Carefully selected premium, durable components on high-end carbon frames, with fully adjustable suspension elements that deliver exactly the level of performance that ambitious riders are looking for. These outstanding builds give you everything you need to conquer any challenge on the mountain – unlimited fun on your trails, guaranteed.            </p>
+        </div>
+
+    </div>
+    <div id="Tues" class="categoryHeader">
+        <img src="https://cdn-prod.yt-industries.com/media/image/a2/b2/12/TUES_overview_01.jpg" alt="">
+        <p>
+            From Rampage to the World Cup, the TUES dominates the world’s toughest tracks. This incredibly fast bike is
+            the right choice for racing through rough trails and big jumps. With four World Cups, two World Champs
+            titles, and seven Rampage podium spots, the TUES performance speaks for itself. We can promise you this - if
+            you screw things up, it won’t be because of the bike.
+
+        </p>
+    </div>
+    <div class="category">
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/cd/16/c5/01_Tues_27_CF_PRO_RACE_Front.png" alt="">
+            <p>
+                Tues Pro Race 27 <br> 6,399 €
+            </p>
+            <p>
+               <br> Factory Team Level - our flagship build leaves nothing to be desired. Every single aspect of this bike offers uncompromising performance. All the best components, including fully adjustable suspension and lightweight carbon parts, are standard on our TUES PRO RACE. Race plate or bike park, it doesn't matter - there are no excuses on this bike.            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/c6/a8/1d/01_TUES27_CF_Pro_Ghostship_Green_Front.png"
+                alt="">
+            <p>
+                tues Pro 27 <br> 4,499 €
+            </p>
+            <p>
+                <br><br><br> The TUES PRO is equipped with carefully selected premium components to give you exactly the level of performance you want as a demanding rider. Fully adjustable suspension and durable parts for unlimted fun on your tracks.            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/b0/31/a7/02_TUES29_CF_Pro_Silver_Front.png"
+                alt="">
+            <p>
+                Tues Pro 29er <br> 4,499 €
+            </p>
+            <p>
+                <br><br><br> The TUES PRO is equipped with carefully selected premium components to give you exactly the level of performance you want as a demanding rider. Fully adjustable suspension and durable parts for unlimted fun on your tracks.            </p>
+        </div>
+        <div class="bike">
+            <img src="https://cdn-prod.yt-industries.com/media/image/81/a5/a6/02_TUES_AL_Front.png"
+                alt="">
+            <p>
+                Tues Base AL 27 <br> 3,499 €
+            </p>
+            <p>
+               <br><br><br> The TUES BASE delivers solid performance with impressive specs, a high-quality aluminum frame, and the distinctive look of a YT. Its easy-to-adjust suspension and durable components make for long-lasting good times.             </p>
+        </div>
+
+    </div>
+    <div class="spacer"></div>
 </body>
 
 </html>
