--- a/01-HTML-CSS/04-flex/oneExercise/ohad/index.html
+++ b/01-HTML-CSS/04-flex/oneExercise/ohad/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="box">
+            <img src="pics/F35.JPG" alt="" title="" >
+            <div class="text">
+                <p>בדיקת כיתוב </p>
+
+            </div>>
+        </div>
+
+        <div class="box">
+            <img src="pics/F16.JPG" alt="" title="" >
+        </div>
+        <div class="box">
+            <img src="pics/F15.JPG" alt="" title="" >
+        </div>
+        <div class="box">
+            <img src="pics/IAF_logo.png" alt="" title="" >
+        </div>
+        <div class="box">
+            <img src="pics/helicopter.jpg" alt="" title="" >
+        </div>
+    </div>
 </body>
 </html>
