--- a/01-HTML-CSS/04-flex/HomeTask/ShaniRom/index1.html
+++ b/01-HTML-CSS/04-flex/HomeTask/ShaniRom/index1.html
@@ -44,23 +44,28 @@
     <div class="pageboxes">
         <div class="pagebox one">
             <img src="bigfoot.png">
-            <p> Bigfoot sighted again in texas riding a truck! </p>
+            <p> Bigfoot sighted again in Texas riding a truck! </p>
+            <p class="small">(READ MORE)</p>
         </div>
         <div class="pagebox two">
             <img src="questionmark.png">
             <p> Trolls and Goblins the same species??</p>
+            <p class="small">(READ MORE)</p>
         </div>
         <div class="pagebox three">
             <img src="mermaid.png">
             <p> Mermaid scales found in the Mexico beach. </p>
+            <p class="small">(READ MORE)</p>
         </div>
         <div class="pagebox four">
             <img src="lochness.png">
             <p>New Myth No More merch coming out for the winter.</p>
+            <p class="small">(READ MORE)</p>
         </div>
         <div class="pagebox five">
             <img src="lochnessmonster.png">
-            <p>Join the new Loch Ness expedition in January! Sign up to the website and get updates on the new finds. </p>
+            <p>Join the new Loch Ness expedition in January! </p>
+            <p class="small">(READ MORE)</p>
         </div>
         
 
