--- a/01-HTML-CSS/04-flex/artur/flex.html
+++ b/01-HTML-CSS/04-flex/artur/flex.html
@@ -19,7 +19,7 @@
         </div>
         
         <div class="subtext">
-            <span class="spantitle">  in our cleaning team the emphasis are</span><ul>
+            <span class="spantitle">we here to make you happy and clean</span><ul>
                <li> friendship</li>
                <li>good service</li>
                <li>loyalty</li>
@@ -35,12 +35,11 @@
            <span class="span-subtext-right">help!!😣</span>
         </div>>
         <div class="wrapper-bottom">
-            <div class="box-bottom">1</div>
-            <div class="box-bottom">2</div>
-            <div class="box-bottom">3</div>
-            <div class="box-bottom">4</div>
-            <div class="box-bottom">5</div>
-            <div class="box-bottom">6</div>
+            <div class="box-bottom"><span class="span-lowbar">covid-19 special cleaning</span><img class="img-lowbar"src ="photos/img-special-event.jpg" alt=""></div>
+            <div class="box-bottom"><span class="span-lowbar">special event cleaning</span><img class="img-lowbar"src="photos/img-special-event.jpg" alt="special-event"></div>
+            <div class="box-bottom"><span class="span-lowbar">Oven Cleaning</span><img class="img-lowbar"src="photos/img-oven.jpg" alt="oven"></div>
+            <div class="box-bottom"><span class="span-lowbar">Housekeeping Services</span><img class="img-lowbar"src="photos/img-special-event.jpg" alt=""></div>
+            <div class="box-bottom"><span class="span-lowbar">Occasional & One Time Cleaning Service</span><img class="img-lowbar"src="photos/img-special-event.jpg" alt=""> </div>
         </div>
 
 
