--- a/01-HTML-CSS/04-flex/HomeTask/noa/index.html
+++ b/01-HTML-CSS/04-flex/HomeTask/noa/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>גזעי ארנבים</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e375e04e9b.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -16,10 +17,10 @@
     </h1>
     <div class="arrow1">
         <div class="arrow">
-            <P> &rarr; </P>
+             <i class="fas fa-angle-right"></i> 
         </div>
         <div class="arrow">
-            <P> &larr; </P>
+             <i class="fas fa-angle-left"></i> 
         </div>
     </div>
     <div class="wrapper">
