--- a/01-HTML-CSS/04-flex/oneExercise/Mich&Odha/FlexHW/FlexMich.html
+++ b/01-HTML-CSS/04-flex/oneExercise/Mich&Odha/FlexHW/FlexMich.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" href="StyleTa.css">
+<link rel="stylesheet" href="flexstyle.css">
 <body>
     <div><h1>Cats2see</h1></div>
     <div><h2>purry eye sight</h2></div>
