--- a/01-HTML-CSS/04-flex/chaim/index.html
+++ b/01-HTML-CSS/04-flex/chaim/index.html
@@ -26,7 +26,7 @@
      <div class="box">3
     <img src="3.jpg">
     <h3>עגבנייה</h3>
-     <p>העגבנייה מוגדרת כפרי מבחינת אופן הגידול  </p>
+     <p>העגבנייה מוגדרת כפרי בצורת הגידול  </p>
 </div>
         <div class="box">4
         <img src="4.jpg">
