--- a/01-HTML-CSS/04-flex/HomeTask/OmriAharonov/Flex.html
+++ b/01-HTML-CSS/04-flex/HomeTask/OmriAharonov/Flex.html
@@ -9,6 +9,8 @@
     <script src="https://kit.fontawesome.com/7009c62a78.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Praise&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap" rel="stylesheet">
     <title>Online Supermarket</title>
 </head>
@@ -33,8 +35,21 @@
         </div>
     </div>
 
-    <div class="wrapper">
+    <div class="Text">
+        <p>ShopWithUs</p>
+        <i class="fas fa-truck-loading"></i>
+    </div>
 
+   <div class="Arrow">
+       <div class="chevron">
+        <i class="fas fa-chevron-circle-left"></i>
+       </div>
+       <div class="chevron">
+        <i class="fas fa-chevron-circle-right"></i>
+       </div>
+   </div>
+
+    <div class="wrapper">
         <div class="category">
             <img src="bread.png">
             <p>Pastries</p>
@@ -82,6 +97,9 @@
         </div>
         <div class="icon">
             <img src="email.png">
+        </div>
+        <div class="icon">
+            <p>Stay in contact</p>
         </div>
     </div>
 </body>
