--- a/01-HTML-CSS/04-flex/HomeTask/MichaelDubovyk/index.html
+++ b/01-HTML-CSS/04-flex/HomeTask/MichaelDubovyk/index.html
@@ -68,7 +68,8 @@
 
             <div class="bodright">
 
-               
+                <img src="img/left.png">
+                <img src="img/right.png">
 
             </div>
 
