--- a/01-HTML-CSS/04-flex/HomeTask/Roi/index.html
+++ b/01-HTML-CSS/04-flex/HomeTask/Roi/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-
-
-    <title>My fashion site</title>
+    <title>Netflix like</title>
 </head>
 <body>
         <div class="frame">
