--- a/01-HTML-CSS/04-flex/Roi/index.html
+++ b/01-HTML-CSS/04-flex/Roi/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class = "wrapper">
-        <div class = "box">1</div>
+        <div class = "box"><img src="https://picsum.photos/200">1</div>
         <div class = "box">2</div>
         <div class = "box">3</div>
         <div class = "box">4</div>
